chore: adapt the codebase for camunda client 8.8.0-SNAPSHOT